--- a/jewellery-ai-node-ms/package.json
+++ b/jewellery-ai-node-ms/package.json
@@ -15,6 +15,8 @@
     "vitest": "^1.5.0"
   },
   "dependencies": {
-    "encore.dev": "^1.48.11"
+    "dff-util": "^1.3.4",
+    "encore.dev": "^1.48.11",
+    "mongodb": "^6.18.0"
   }
 }
